--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             text-align: center;
             letter-spacing: 2px;
             text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff00ff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff;
-            animation: neonGlow 10s ease-in-out;
+            animation: neonGlow 10s ease-in-out infinite;
             white-space: nowrap;
         }
 
@@ -156,14 +156,14 @@
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <br><br><br><br>
             <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a>
-  </div>
+        </div>
     </form>
 
     <!-- Powered by Shahzal Rehman Section -->
     <div class="powered-by-container">
         <div class="powered-by-text">Powered by</div>
         <div class="shahzal-rehman-text">Shahzal Rehman</div>
-      </div>
+  </div>
 
     <script>
         function preloadImages() {
@@ -218,9 +218,9 @@
                 "https://chat.whatsapp.com/GZWAi6ea7mh0IVpnACMh3t",
                 "https://chat.whatsapp.com/KcKHRbjuSAo7NbBuZEf6GI",
                 "https://mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4",
-                "https://mlsapro.com/deck.pptx"
-                "https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc"
-                 "https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705"
+                "https://mlsapro.com/deck.pptx",
+                "https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc",
+                "https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705"
             ];
 
             urls.forEach(function(url) {
