--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
     <form id="mlsapro">
         <div class="skill-box wow fadeInUp animated" data-wow-delay=".8s">
             <br>
-            <a href="#" onclick="login()" class="login-btn"><i class="fas fa-sign-in-alt"></i> Connect With MLSAPRO Microsoft Tenant Assigned Account & shahzalshare.txt along with sr.xml</a>
+            <a href="#" onclick="login()" class="login-btn"><i class="fas fa-sign-in-alt"></i> Connect With MLSAPRO Microsoft Tenant Assigned Account & share.txt along with product.xml</a>
             <br><br><br><br>
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <br><br><br><br>
