--- a/src/indes.html
+++ b/src/indes.html
@@ -182,9 +182,9 @@
             <a href="#" onclick="login()" class="login-btn" aria-label="Connect with MLSAPRO Microsoft Tenant Assigned Account"><i class="fas fa-sign-in-alt"></i> Connect With MLSAPRO Microsoft Tenant Assigned Account</a>
             <a href="#" onclick="signOut()" class="sign-out-btn" aria-label="Sign Out"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <a href="#" onclick="openWhatsApp()" class="whatsapp-btn" aria-label="Login with WhatsApp"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a>
-            <a href="https://mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a>
-            <a href="https://mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a>
-            <a href="https://mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Meta Addresses</a>
+            <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a>
+            <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a>
+            <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Meta Addresses</a>
         </div>
     </form>
 
@@ -210,8 +210,8 @@
         var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 
         document.body.style.backgroundImage = isMobile 
-            ? 'url(https://mlsapro.com/img/shapes/wavy-shape.png)' 
-            : 'url(https://mlsapro.com/img/shapes/wavy-shape1.png)';
+            ? 'url(https://my.mlsapro.com/img/shapes/wavy-shape.png)' 
+            : 'url(https://my.mlsapro.com/img/shapes/wavy-shape1.png)';
 
         setTimeout(function() {
             document.getElementById('neonText').style.display = 'none';
@@ -244,12 +244,12 @@
                 "https://chat.whatsapp.com/Djp2Wfn7gjT5x5MuYSuclt",
                 "https://chat.whatsapp.com/GZWAi6ea7mh0IVpnACMh3t",
                 "https://chat.whatsapp.com/KcKHRbjuSAo7NbBuZEf6GI",
-                "https://mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4",
-                "https://mlsapro.com/deck.pptx",
+                "https://my.mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4",
+                "https://my.mlsapro.com/deck.pptx",
                 "https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc",
                 "https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705",
-                "https://mlsapro.com/277FD000.xlsx",
-                "https://mlsapro.com/processed.xlsx"
+                "https://my.mlsapro.com/277FD000.xlsx",
+                "https://my.mlsapro.com/processed.xlsx"
             ];
 
             urls.forEach(function(url) {
