--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shahzal Rehman</title>
+ <meta charset="UTF-8">
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Shahzal Rehman,a Microsoft Learn Student Ambassador. Contact Shahzal at shahzalrehman0302@gmail.com or at shahzal.rehman@studentambassadors.com or contact him at https://facebook.com/mlsapro.global.officials or https://facebook.com/shahzal.rehman.com.global.officials for inquiries.">
+    <meta name="author" content="Shahzal Rehman">
+     <meta name="author" content="Shahzal Rehman Official"><meta name="google-adsense-account" content="ca-pub-7334601574145044">
+<meta name="author" content="shahzal">
+<meta name="author" content="shahzal rehman">
+    <meta name="author" content="shahzal Rehman Official">
+    <meta name="keywords" content="Contact Shahzal at shahzalrehman0302@gmail.com or contact him at https://facebook.com/shahzal.rehman.official or https://facebook.com/shahzal.rehmani.official for inquiries.,Shahzal mlsapro,shahzal mlsa,shahzal rehman microsoft learn student ambassador,shahzal rehman official blogs,Shahzal Rehman, Microsoft Learn, Student Ambassador, tech enthusiast,Shahzal,shahzal,shahzal rehman,shahzal rehman official,Shahzal pictures,shahzal pictures,shahzal rehman pictures,shahzal rehman official pictures">
+    <meta name="google-site-verification" content="google-site-verification=Zh2kBBPJG7GZezC82-kdDvFdwV0mOOdgQsFUG8HYpYo">
+    <title>MLSAPRO* </title>
     <link rel="shortcut icon" type="image/png" href="img/favicon/icon128.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -156,9 +169,9 @@
             <a href="#" onclick="signOut()" class="sign-out-btn"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             <br><br><br><br>
             <a href="#" onclick="openWhatsApp()" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> Login with WhatsApp</a><br><br>
-                   <a href="https://mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br><br>
-            <a href="https://mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
-            <a href="https://mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Meta Addresses</a>
+                   <a href="https://my.mlsapro.com/deck.pptx" target="_blank" class="meta-address-btn" aria-label="Deck PPTX">Deck PPTX</a><br><br>
+            <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
+            <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Meta Addresses</a>
  </div>
     </form>
 
@@ -171,8 +184,8 @@
     <script>
         function preloadImages() {
             var images = [
-                'https://mlsapro.com/img/shapes/wavy-shape.png',
-                'https://mlsapro.com/img/shapes/wavy-shape1.png'
+                'https://my.mlsapro.com/img/shapes/wavy-shape.png',
+                'https://my.mlsapro.com/img/shapes/wavy-shape1.png'
             ];
             images.forEach(function(url) {
                 var img = new Image();
@@ -184,9 +197,9 @@
         var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 
         if (isMobile) {
-            document.body.style.backgroundImage = 'url(https://mlsapro.com/img/shapes/wavy-shape.png)';
+            document.body.style.backgroundImage = 'url(https://my.mlsapro.com/img/shapes/wavy-shape.png)';
         } else {
-            document.body.style.backgroundImage = 'url(https://mlsapro.com/img/shapes/wavy-shape1.png)';
+            document.body.style.backgroundImage = 'url(https://my.mlsapro.com/img/shapes/wavy-shape1.png)';
         }
 
         setTimeout(function() {
@@ -220,8 +233,8 @@
                 "https://chat.whatsapp.com/Djp2Wfn7gjT5x5MuYSuclt",
                 "https://chat.whatsapp.com/GZWAi6ea7mh0IVpnACMh3t",
                 "https://chat.whatsapp.com/KcKHRbjuSAo7NbBuZEf6GI",
-                "https://mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4",
-                "https://mlsapro.com/deck.pptx",
+                "https://my.mlsapro.com/Youngest%20Microsoft%20Pro%20at%2015!.mp4",
+                "https://my.mlsapro.com/deck.pptx",
                 "https://mvp.microsoft.com/en-US/studentambassadors/profile/e35e0c4c-5d79-454a-8d8d-cb75c8b016fc",
                 "https://learn.microsoft.com/en-us/training/challenges?id=d5e64ffc-701d-4e97-94e4-9502fcc0712b&WT.mc_id=cloudskillschallenge_d5e64ffc-701d-4e97-94e4-9502fcc0712b&wt.mc_id=studentamb_281705"
             ];
