--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
             <a href="https://my.mlsapro.com/deck1.pptx" target="_blank" class="meta-address-btn" aria-label="Deck 1 PPTX">Deck 1 PPTX</a><br><br>
             <a href="https://my.mlsapro.com/meta.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Meta Addresses</a>
 <a href="https://my.mlsapro.com/srmapofmain.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Main MAP</a>
-<a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our Main MAP</a>
+<a href="https://my.mlsapro.com/map.txt" target="_blank" class="meta-address-btn" aria-label="Our Meta Addresses">Our MAP.txt </a>
  </div>
     </form>
 
